Still displaying this issue! Alignment is not correct for "Signer Signature and Admin signature" on "signed" page in case of "Stand Alone" documents

--- a/assets/css/rtl-basic.css
+++ b/assets/css/rtl-basic.css
@@ -895,7 +895,7 @@ span.header-title {
     margin-top: 50px;
 }
 
-#main-signature .form-inline div {
+#main-signature .form-inline .col-sm-6{
     float: right;
 }
 
